--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,20 @@
 	"configurations": [
 		{
 			"type": "java",
+			"name": "Launch ReactorMain",
+			"request": "launch",
+			"mainClass": "bgu.spl.net.impl.BGSServer.ReactorMain",
+			"projectName": "spl-net"
+		},
+		{
+			"type": "java",
 			"name": "Launch TPCMain",
 			"request": "launch",
 			"mainClass": "bgu.spl.net.impl.BGSServer.TPCMain",
 			"projectName": "spl-net",
-			"args": [ 1337 ]
+			"args": [
+				1337
+			]
 		}
 	]
 }
