made maven create 2 separate jars, one for each type of server

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 !.vscode/
 !.vscode/launch.json
 !.gitignore
-
+!tarCommands.sh
 
 !Client
 !Client/**
@@ -13,4 +13,3 @@ Client/bin/**
 !Server
 !Server/**
 Server/target/**
-
